--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -34,18 +34,18 @@
  <div class="menu-container">
   <nav class="menu">
     <ul class="menu-list">
-      <li class="menu-item"><a href="#">Catalogo</a></li>
+      <li class="menu-item"><a href="/catalogo">Catálogo</a></li>
       <li class="menu-item"><a href="#ancla-1">Novedades</a></li>
       <li class="menu-item"><a href="#ancla-2">Quienes Somos?</a></li>
       <li class="menu-item"><a href="#ancla-3">Experiencias</a></li>
     </ul>
   </nav>
 </div>
-
+<BR></BR>
 
 <div class="color">
 
-<br>
+
 <a name="ancla-1"></a>
 <H1>NOVEDADES</H1>
  <div class="contenedor_total_cards">
@@ -54,22 +54,22 @@
       <ul class="carousel">
           <li class="card">
               <div class="img"><img src="../static/img/botasChelsy.jpeg" alt="img" draggable="false" style="width: 200%; height: auto;" ></div><BR>
-              <h2>Botas Chlesy En Cuero</h2></BR>
+              <h2>BOTAS CHELSY EN CUERO</h2></BR>
 
           </li>
           <li class="card">
               <div class="img"><img src="../static/img/manillaTaches.jpeg" alt="img" draggable="false"  style="width: 200%; height: auto;"></div><BR>
-              <h2>Manilla En Cuero con Taches</h2></BR>
+              <h2>MANILLA EN CUERO EN TACHES</h2></BR>
               
           </li>
               <li class="card">
                   <div class="img"><img src="../static/img/camisetaBanda.jpeg" alt="img" draggable="false"  style="width: 200%; height: auto;"></div><BR>
-              <h2>Camiseta De Bandas</h2></BR>
+              <h2>CAMISETA DE BANDAS</h2></BR>
               
           </li>
                <li class="card">
                    <div class="img"><img src="../static/img/pantalonCuero.jpeg" alt="img" draggable="false"  style="width: 200%; height: auto;"></div><BR>
-              <h2>Pantalon en Cuero</h2></BR>
+              <h2>PANTALON EN CUERO</h2></BR>
              
           </li>
       </ul>
@@ -81,7 +81,7 @@
 
 <section class="container about">
   <a name="ancla-2"></a>
-  <h2 class="subtitle">¿Quienes Somos?</h2><br>
+  <h1 class="subtitle">¿QUIENES SOMOS?</h1><br>
   <p class="about__paragraph">somos una empresa dedicada a la comercialización de ropa ,calzado y accesorios para personas de todos los géneros y prototipos a la vanguardia de la moda.
     Para jóvenes y adultos que quieren tener una propia identidad y personalidad resaltando sus gustos musicales y personas arriesgadas que quieren  destacar el estilo de varias culturas urbanas y encontrarlo todo en un mismo lugar.</p>
     <br>
@@ -111,7 +111,7 @@
 <hr><br><br>
 
 <a name="ancla-3"></a>
-<h1>Experiencias De Clientes</h1>
+<h1>EXPERIENCIAS DE CLIENTES</h1>
 <br>
 
 <div class="comentarios">
