--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,4 +1,12 @@
 
+  <header>
+    <div class="logo">
+      <img src="../static/img/logo_negro.png" alt="Logo Empresa">
+    </div>
+    <div class="admin-icon">
+      <img id="iconoAdmin" src="../static/img/icono_administrador.png" alt="Icono Administrador">
+    </div>
+  </header>
 <link rel="stylesheet" href="{{url_for('static', filename='./css/formulario.css')}}">
 <div class="login-box">
     <p>Login</p>
@@ -11,7 +19,7 @@
         <input required="" name="admin_password" type="password">
         <label>Password</label>
       </div>
-        <button class="submit" type="submit">Submit</button>
+        <button class="submit" type="submit"><span>Submit</span></button>
     </form>
     <p>Don't have an account? <a href="/registro" class="a2">Registrarse</a></p>
   </div>
