--- a/src/templates/registerUser.html
+++ b/src/templates/registerUser.html
@@ -1,3 +1,11 @@
+<header>
+    <div class="logo">
+      <img src="../static/img/logo_negro.png" alt="Logo Empresa">
+    </div>
+    <div class="admin-icon">
+      <img id="iconoAdmin" src="../static/img/icono_administrador.png" alt="Icono Administrador">
+    </div>
+  </header>
 <link rel="stylesheet" href="{{url_for('static', filename='./css/registro.css')}}">
     <div class="registro">
         <form class=form action="/registro" method="POST">
@@ -25,9 +33,8 @@
         <span>Password</span>
     </label>
     
-        
-    
 
-    <button class="submit">Submit</button>
-    <p class="signin">Already have an acount ? <a href="formulario.html">Signin</a> </p>
+    <button class="submit" type="submit"><span>Submit</span></button>
+    </button>
+    <p class="signin">Already have an acount ? <a href="login.html">Signin</a> </p>
 </form>
