--- a/src/static/css/layout.css
+++ b/src/static/css/layout.css
@@ -232,21 +232,17 @@ h1{
   .menu {
     padding: 10px;
     display: flex;
-    justify-content: space-between; /* Distribuye los elementos a lo largo del ancho */
+    justify-content: center; /* Distribuye los elementos a lo largo del ancho */
   }
   
   .menu-list {
     list-style-type: none;
-    padding: 15px;
-    margin: 10px;
+    justify-content: space-around; 
+    width: 100%;
     display: flex;
-    justify-content: center;
   }
-  
-  .menu-item {
-    margin: 0 110px;
-  }
-  
+
+
   .menu-item a {
     color: #fff;
     text-decoration: none;
@@ -436,6 +432,9 @@ h1{
   }
 
   .comentarios{
+    width: 100%;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 1rem;
   }
