--- a/src/static/css/formulario.css
+++ b/src/static/css/formulario.css
@@ -1,3 +1,25 @@
+header {
+  display: flex;
+  justify-content: space-between; /* Distribuir contenido en el eje horizontal */ 
+}
+
+ /* Estilos para el logo */
+  .logo {
+    max-width: 300px; /* Definir un ancho máximo para el logo */
+  }
+  
+  .logo img {
+    max-width: 100%; /* Ajustar al ancho del contenedor */
+    height: auto;
+  }
+    /* Estilos para el icono de administrador */
+    .admin-icon img {
+      max-height: 80px;
+    }
+
+    p,label{
+      font-family: 'Courier New', Courier, monospace;
+    }
 .login-box {
     position: absolute;
     top: 50%;
@@ -177,3 +199,55 @@
     color: #aaa;
     border-radius: 5px;
   }
+  button {
+    outline: none;
+    cursor: pointer;
+    border: none;
+    padding: 0.9rem 2rem;
+    margin: 0;
+    font-family:'Courier New', Courier, monospace;
+    font-size: inherit;
+    position: relative;
+    display: inline-block;
+    letter-spacing: 0.05rem;
+    font-weight: 700;
+    font-size: 17px;
+    border-radius: 500px;
+    overflow: hidden;
+    background: #5a0600;
+    color: ghostwhite;
+   }
+   
+   button span {
+    position: relative;
+    z-index: 10;
+    transition: color 0.4s;
+   }
+   
+   button:hover span {
+    color: rgb(255, 255, 255);
+   }
+   
+   button::before,
+   button::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+   }
+   
+   button::before {
+    content: "";
+    background: #000;
+    width: 120%;
+    left: -10%;
+    transform: skew(30deg);
+    transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+   }
+   
+   button:hover::before {
+    transform: translate3d(100%, 0, 0);
+   }
+   
