--- a/src/static/css/layout.css
+++ b/src/static/css/layout.css
@@ -1,6 +1,12 @@
 
 h1{
+  font-family: 'Mooli';
   text-align: center;
+}
+h2,p{
+  font-family:'Courier New', Courier, monospace;
+  margin: 0;
+    padding: 0;
 }
 .container.about {
   text-align: center;
@@ -27,17 +33,10 @@ h1{
   margin: 10px 0;
 }
 
-.about__paragraph,
-.about__paragrah { /* La clase 'about__paragrah' estaba mal escrita, la he corregido aquí */
-  font-size: 0.9em;
+.about__paragraph{ 
+  font-size: 1.0em;
 }
 
-  /* Resetear estilos por defecto */
-  body, h1, h2, p, ul, li {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
   /* Estilos para el header */
   header {
     display: flex;
@@ -76,17 +75,17 @@ h1{
   }
   
   .search-bar input[type="text"] {
-    padding: 6px;
-    border: 1px solid #ccc;
+    padding: 8px;
+    border: 1px solid #5A0600;
     border-radius: 4px;
   }
   
   .search-bar button {
     padding: 6px 10px;
-    color: #af3c3c;
-    border: none;
-    border-radius: 4px;
-    margin-left: 10px;
+    color: #5A0600;
+    border-color: #5a0600;
+    border-radius: 6px;
+    margin-left: 8px;
     cursor: pointer;
   }
 
@@ -94,26 +93,18 @@ h1{
   /*CARRUSEL*/
 
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-
   
   .contenedor_total_cards {
     display: flex;
-    padding: 0 35px;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: linear-gradient(to left top, #ffffff, #ffffff);
+    background: linear-gradient(to left top, #fff, #fff);
   }
   /*TAMAÑO*/
   .wrapper {
-    max-width: 1100px;
-    width: 100%;
+    max-width: 900px;
+    width: 80%;
     position: relative;
     left: 10px;
   }
@@ -122,7 +113,7 @@ h1{
     grid-auto-flow: column;
     grid-auto-columns: calc((100% / 2) - 12px);
     overflow-x: auto;
-    gap: 16px;
+    gap: 10px;
   }
   /*BARRA*/
   .carousel::-webkit-scrollbar {
@@ -140,7 +131,6 @@ h1{
     list-style: none;
     background: #fff;
     cursor: pointer;
-    padding-bottom: 15px;
     flex-direction: column;
     border-radius: 8px;
     align-items: center;
@@ -161,18 +151,9 @@ h1{
     border: 4px solid #ffffff;
   }
   .carousel .card h2 {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.56rem;
     margin: 30px 0 5px;
-  }
-  .carousel .card span {
-    color: #6A6D78;
-    font-size: 1.31rem;
-  }
-  @media screen and (max-width: 900px) {
-    .wrapper .carousel {
-      grid-auto-columns: calc((100% / 2) - 9px);
-    }
   }
   
   /*Botones*/
@@ -225,24 +206,29 @@ h1{
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #790e07;
+    background-color: #5a0600;
     z-index: 999;
   }
   
   .menu {
-    padding: 10px;
+    padding: 20px;
     display: flex;
-    justify-content: center; /* Distribuye los elementos a lo largo del ancho */
+    justify-content: space-between; /* Distribuye los elementos a lo largo del ancho */
   }
   
   .menu-list {
+    font-family: 'Courier New', Courier, monospace;
     list-style-type: none;
-    justify-content: space-around; 
-    width: 100%;
+    padding: 0px;
+    margin: 10px;
     display: flex;
+    justify-content: center;
   }
-
-
+  
+  .menu-item {
+    margin: 0 100px;
+  }
+  
   .menu-item a {
     color: #fff;
     text-decoration: none;
@@ -256,7 +242,7 @@ h1{
 
 
   footer {
-    background-color: black;
+    background-color: #5a0600;
     color: white;
     padding: 20px;
     text-align: center;
@@ -283,7 +269,7 @@ h1{
   .cardd {
 
     height: fit-content;
-    background-color: rgb(0, 0, 0);
+    background-color: #5a0600;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -296,7 +282,7 @@ h1{
   .socialContainer {
     width: 52px;
     height: 52px;
-    background-color: rgb(44, 44, 44);
+    background-color: rgb(94, 45, 45);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -311,11 +297,6 @@ h1{
   /* twitter*/
   .containerTwo:hover {
     background-color: #00acee;
-    transition-duration: .3s;
-  }
-  /* linkdin*/
-  .containerThree:hover {
-    background-color: #0072b1;
     transition-duration: .3s;
   }
   /* Whatsapp*/
@@ -356,10 +337,10 @@ h1{
   .cards {
     
     position: relative;
-    background-color: #1b1b1b;
+    background-color: #201e1e;
     padding: 1em;
     z-index: 5;
-    box-shadow: 4px 4px 20px #5a0600;
+    box-shadow: 4px 4px 20px #ffffff;
     border-radius: 10px;
     max-width: 300px;
     transition: 200ms ease-in-out;
@@ -388,7 +369,7 @@ h1{
   .footer {
     position: relative;
     width: 100%;
-    color: #9fa4aa;
+    color: #2674d3;
     font-size: 12px;
     display: flex;
     align-items: center;
@@ -432,9 +413,6 @@ h1{
   }
 
   .comentarios{
-    width: 100%;
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 1rem;
   }
