--- a/src/templates/components/comentarios/comentarios.html
+++ b/src/templates/components/comentarios/comentarios.html
@@ -1,6 +1,94 @@
+<style>
+  .comentarios {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-around;
+  }
+
+
+  .cards {
+    position: relative;
+    background-color: #201e1e;
+    padding: 1em;
+    z-index: 5;
+    box-shadow: 4px 4px 20px #ffffff;
+    border-radius: 10px;
+    max-width: 300px;
+    transition: 200ms ease-in-out;
+  }
+
+  .body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .body .text {
+    margin: 0 10px 0 0;
+    white-space: pre-line;
+    color: #c0c3d7;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-bottom: 4px;
+  }
+
+
+
+  .username {
+    color: #C6E1ED;
+    font-size: 0.85em;
+    font-weight: 600;
+  }
+
+
+
+  .footer {
+    position: relative;
+    width: 100%;
+    color: #2674d3;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: none;
+    margin-top: 10px;
+  }
+
+  .footer div {
+    margin-right: 1rem;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  .footer svg {
+    margin-right: 5px;
+    height: 100%;
+    stroke: #9fa4aa;
+  }
+
+  .viewer span {
+    height: 20px;
+    width: 20px;
+    background-color: rgb(28, 117, 219);
+    margin-right: -6px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    display: grid;
+    align-items: center;
+    text-align: center;
+    font-weight: bold;
+    font-size: 8px;
+    color: #fff;
+    padding: 2px;
+  }
+
+  .viewer span svg {
+    stroke: #fff;
+  }
+</style>
+
 <div class="comentarios">
-
-
   <div class="cards">
 
     <div class="body">
