--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
     <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Cerrar Sesion</a>
+            <a class="nav-link active" aria-current="page" href="/">Cerrar Sesion</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/login">Volver</a>
-          </li>
+            <a class="nav-link" href="/admin">Volver</a>
+        </li>
     </ul>
 
     {%with messages = get_flashed_messages()%}
     {% if messages %}
-        {% for message  in messages  %}
-        <div class='alert alert-success ml-3 mr-3'>
+    {% for message in messages %}
+    <div class='alert alert-success ml-3 mr-3'>
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-         <strong></strong>{{message}}
-                        
-         </div>
+        <strong></strong>{{message}}
 
-        {% endfor %}    
+    </div>
 
-      {% endif %}
-     {%endwith%}
-    
-    <h1 class="text-center mt-5 nb-5 text-primary"> CRUD :D </h1>
+    {% endfor %}
+
+    {% endif %}
+    {%endwith%}
+
+
+
+
+
+
+    <h1 class="text-center mt-5 nb-5 text-primary"> Productos </h1>
+    <!--<input type="file" id="fileInput">
+    <button id="uploadButton">Upload</button> -->
+
+
 
     <div class="container">
         <div class="card">
@@ -58,16 +72,67 @@
                         <!--<div class="col">
                             <label>Imagen</label>
                             <input type="text" class="form-control mb-3" name="imagen">
-                        </div>  
+                        </div>  -->
+                        <div class="col">
+                            <label>stock</label>
+                            <input type="text" class="form-control mb-3" name="stock">
+                        </div>
                         <div class="col">       
                             <label>imagen</label>
-                            <input type="file" class="form-control mb-3" name="imagen" accept="image/png" required>
-                        </div> -->
+                            <input type="file" id="fileInput" class="form-control mb-3" name="imagen" accept="image/png" required>
+                        </div> 
                         <div class="col">
-                            <button class="btn btn-primary mb-3 mt-4" type="submit">Agregar</button>
+                            <button id="uploadButton" class="btn btn-primary mb-3 mt-4" type="submit">Agregar</button>
                         </div>
                 </form>
-
+                <script>
+                    document.getElementById('uploadButton').addEventListener('click', uploadFile);
+                        async function uploadFile() {
+                            // Obtener el elemento de input de archivo
+                            var fileInput = document.getElementById('fileInput');
+                
+                            // Obtener el archivo seleccionado
+                            //OBTENER CONEXION CON EL BACKEND
+                            var file = fileInput.files[0];
+                            const host = "http://localhost:3002/api"; //"http://localhost:4000/api/getProducts"
+                            const uploadResponse = await fetch(host + "/upload", {
+                                method: "POST",
+                                headers: {
+                                    "Content-Type": "application/json",
+                                },
+                                body: JSON.stringify({
+                                    folder: "Rock_Star",
+                                    contentType: file.type, //esto retorna el tipo del archivo(png, jpeg, mp4)
+                                }),
+                            });
+                
+                            const { data: uploadData, url_download } = await uploadResponse.json();
+                
+                            //AQUI EMPIEZA PETICION A AWS (GUARDAR IMAGEN)
+                            if (!url_download || !uploadData.url) return failRequest();
+                            const formData = new FormData();
+                            Object.entries(uploadData.fields).forEach(([field, value]) => {
+                                formData.append(field, value);
+                            });
+                            formData.append("file", file);
+                           
+                
+                            // Hacer una solicitud fetch al servidor
+                             fetch(uploadData.url, {
+                                method: 'POST',
+                                body: formData
+                            })
+                                .then(response => response.json())
+                                .then(data => {
+                                    // Manejar la respuesta del servidor
+                                    console.log('Respuesta del servidor:', data);
+                                })
+                                .catch(error => {
+                                    // Manejar errores
+                                    console.error('Error al realizar la petición:', error);
+                                }); 
+                        } 
+                    </script>
                 <!-- Tabla:p-->
 
                 <table class="table table-bordered">
@@ -77,74 +142,89 @@
                         <th scope="col">Descripcion</th>
                         <th scope="col">Precio</th>
                         <th scope="col">Cantidad</th>
-                        <!--<th scope="col">Imagen</th>-->
+                        <th scope="col">Stock</th>
+                        <th scope="col">Imagen</th>
                         <th scope="col">Editar</th>
                         <th scope="col">Eliminar</th>
                     </thead>
-                
-                <tbody>
-                    {% for d in data %}
-                <tr>
-                    <td>{{d.id}}</td>
-                    <td>{{d.nombre}}</td>
-                    <td>{{d.descripcion}}</td>
-                    <td>{{d.precio}}</td>
-                    <td>{{d.cantidad}}</td>
-                    <!--<td>{{d.imagen}}</td>-->
-                    <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal{{d.id}}" id="btn-edit{{d.id}}">Editar</button></td>
-                    <td><a href="{{url_for('deleteProduct', id=d.id)}}" class="btn btn-danger btn-sm">Eliminar</a></td>
-                    
-                </tr>
 
-                <!-- llamar al modal--> 
+                    <tbody>
+                        {% for d in data %}
+                        <tr>
+                            <td>{{d.id}}</td>
+                            <td>{{d.nombre}}</td>
+                            <td>{{d.descripcion}}</td>
+                            <td>{{d.precio}}</td>
+                            <td>{{d.cantidad}}</td>
+                            <td>{{d.stock}}</td>
+                            <td>{{d.imagen}}</td>
+                            <td><button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                    data-bs-target="#modal{{d.id}}" id="btn-edit{{d.id}}">Editar</button></td>
+                            <td><a href="{{url_for('deleteProduct', id=d.id)}}"
+                                    class="btn btn-danger btn-sm">Eliminar</a></td>
 
-                <div class="modal fade" id="modal{{d.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h1 class="modal-title fs-5" id="exampleModalLabel">Registro de Empleado</h1>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form action="/edit/{{d.id}}" method="POST" enctype="multipart/form-data">
-                                <label>Nombre</label>
-                                <input type="text" class="form-control mb-3" name="nombre" value="{{d.nombre}}">
-                                <label>Descripcion</label>
-                                <input type="text" class="form-control mb-3" name="descripcion" value="{{d.descripcion}}">
-                                <label>Precio</label>
-                                <input type="text" class="form-control mb-3" name="precio" value="{{d.precio}}">
-                                <label>Cantidad</label>
-                                <input type="text" class="form-control mb-3" name="cantidad" value="{{d.cantidad}}">
-                                <!--<label>Imagen</label>-->
-                                
-                                <input type="text" name="imagen" value="{{imagen}}">        
-                                <!-- <img id="imgu" src="../static/images/{{imagen}}" width="190" height="100px" alt="" >
+                        </tr>
+
+                        <!-- llamar al modal-->
+
+                        <div class="modal fade" id="modal{{d.id}}" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Registro de Empleado</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form action="/edit/{{d.id}}" method="POST" enctype="multipart/form-data">
+                                            <label>Nombre</label>
+                                            <input type="text" class="form-control mb-3" name="nombre"
+                                                value="{{d.nombre}}">
+                                            <label>Descripcion</label>
+                                            <input type="text" class="form-control mb-3" name="descripcion"
+                                                value="{{d.descripcion}}">
+                                            <label>Precio</label>
+                                            <input type="text" class="form-control mb-3" name="precio"
+                                                value="{{d.precio}}">
+                                            <label>Cantidad</label>
+                                            <input type="text" class="form-control mb-3" name="cantidad"
+                                                value="{{d.cantidad}}">
+                                            <label>Stock</label>
+                                            <input type="text" class="form-control mb-3" name="cantidad"
+                                                value="{{d.stock}}">
+                                            <label>Imagen</label>
+                                            <input type="file" name="imagen" value="{{imagen}}">
+                                            <img id="imgu" src="{{d.imagen}}" width="190" height="100px" alt="" >
                             </div>
-                                <input type="file" name="imagen" id="imagen" onchange="mostrar()" accept="image/png" required> -->
-                            
+                                <input type="file" name="imagen" id="imagen" onchange="mostrar()" accept="image/png" required> 
+
+                                    </div>
+                                    <button type="submit" class="btn-btn-primary">Guardar</button>
+                                </div>
                             </div>
-                            <button type="submit" class="btn-btn-primary">Guardar</button>
-                          </div>
                         </div>
-                      </div>
-                    </div>  
-                      </form>
-                          
-                  
-                           
-                        </div>
-                        <div class="modal-foot">
-
-                    {% endfor%}
+            </div>
+            </form>
 
 
-                </tbody>
+
+        </div>
+        <div class="modal-foot">
+
+            {% endfor%}
+
+
+            </tbody>
             </table>
 
-            </div>
         </div>
     </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
