--- a/src/templates/carrito.html
+++ b/src/templates/carrito.html
@@ -69,14 +69,14 @@
             
                 
 
-                <p form action="/addpedido" method="POST" id="carrito-comprado" class="carrito-comprado disabled">
+                <form action="/addpedido" method="POST" id="carrito-comprado" class="carrito-comprado disabled">
                 <h1>DATOS DEL CLIENTES</h1>
                 <input type="text" placeholder="Nombre" name="nombre_cliente">
-                <input type="email" placeholder="Celular" name="numero_cliente">
+                <input type="text" placeholder="Celular" name="numero_cliente">
                 <input type="text" placeholder="Direccion" name="direccion_cliente">
 
 
-                <p class="link"> SELECCIONAR UNA TALLA</p>
+                <!-- <p class="link"> SELECCIONAR UNA TALLA</p>
                 <center><select id="talla" name="talla">
                         <option value="Talla xxs">XXS</option>
                         <option value="Talla xs">XS</option>
@@ -85,7 +85,7 @@
                         <option value="Talla L">L</option>
                         <option value="Talla xl">XL</option>
                 </center>
-                </select>
+                </select> -->
 
                 <p class="link"> METODO DE PAGO</p>
                 <center><select id="metodo_pago" name="metodo_pago">
