--- a/src/css/estiloCompra.css
+++ b/src/css/estiloCompra.css
@@ -1,3 +1,5 @@
+
+
 *{
     padding: 0;
     margin: 0;
@@ -11,7 +13,7 @@ body {
     
     
 }
-form{
+.carrito-comprado{
     position: absolute;
     min-width: 280px;
     max-width: 25%;
@@ -74,4 +76,3 @@ button{
     margin-top: 15px;
     font-weight: bolder;
 }
-
